crates/pgls_pretty_print/tests/snapshots/multi/tests__select_distinct_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/select_distinct_60.sql
snapshot_kind: text
---
SELECT DISTINCT two FROM onek ORDER BY 1;

SELECT DISTINCT ten FROM onek ORDER BY 1;

SELECT DISTINCT string4 FROM onek ORDER BY 1;

SELECT DISTINCT
  two,
  string4,
  ten
FROM
  onek
ORDER BY two USING <,
  string4 USING <,
  ten USING <;

SELECT DISTINCT p.age FROM person AS p ORDER BY age USING >;

SELECT
  COUNT(*)
FROM
  (SELECT DISTINCT
    two,
    four,
    two
  FROM
    tenk1) AS ss;

SELECT
  COUNT(*)
FROM
  (SELECT DISTINCT
    two,
    four,
    two
  FROM
    tenk1) AS ss;

SET work_mem = '64kB';

SET enable_hashagg = false;

SET jit_above_cost = 0;

SELECT DISTINCT g % 1000 FROM generate_series(0, 9999) AS g;

CREATE TABLE distinct_group_1 AS
  SELECT DISTINCT
    g % 1000
  FROM
    generate_series(0,
    9999) AS g;

SET jit_above_cost = DEFAULT;

CREATE TABLE distinct_group_2 AS
  SELECT DISTINCT
    CAST(g % 1000
    AS TEXT)
  FROM
    generate_series(0,
    9999) AS g;

SET enable_seqscan = 0;

SELECT DISTINCT hundred, two FROM tenk1;

RESET enable_seqscan;

SET enable_hashagg = true;

SET enable_sort = false;

SET jit_above_cost = 0;

SELECT DISTINCT g % 1000 FROM generate_series(0, 9999) AS g;

CREATE TABLE distinct_hash_1 AS
  SELECT DISTINCT
    g % 1000
  FROM
    generate_series(0,
    9999) AS g;

SET jit_above_cost = DEFAULT;

CREATE TABLE distinct_hash_2 AS
  SELECT DISTINCT
    CAST(g % 1000
    AS TEXT)
  FROM
    generate_series(0,
    9999) AS g;

SET enable_sort = true;

SET work_mem = DEFAULT;

SELECT
  *
FROM
  distinct_hash_1
EXCEPT
SELECT
  *
FROM
  distinct_group_1
UNION ALL
(SELECT
  *
FROM
  distinct_group_1
EXCEPT
SELECT
  *
FROM
  distinct_hash_1);

SELECT
  *
FROM
  distinct_hash_1
EXCEPT
SELECT
  *
FROM
  distinct_group_1
UNION ALL
(SELECT
  *
FROM
  distinct_group_1
EXCEPT
SELECT
  *
FROM
  distinct_hash_1);

DROP TABLE "distinct_hash_1";

DROP TABLE "distinct_hash_2";

DROP TABLE "distinct_group_1";

DROP TABLE "distinct_group_2";

SET parallel_tuple_cost = 0;

SET parallel_setup_cost = 0;

SET min_parallel_table_scan_size = 0;

SET max_parallel_workers_per_gather = 2;

SELECT DISTINCT four FROM tenk1;

SELECT DISTINCT four FROM tenk1;

CREATE OR REPLACE FUNCTION distinct_func(
  "a" INT
)
RETURNS INT
AS '
  BEGIN
    RETURN a;
  END;
'
LANGUAGE "plpgsql"
PARALLEL UNSAFE;

SELECT DISTINCT distinct_func(1) FROM tenk1;

CREATE OR REPLACE FUNCTION distinct_func(
  "a" INT
)
RETURNS INT
AS '
  BEGIN
    RETURN a;
  END;
'
LANGUAGE "plpgsql"
PARALLEL SAFE;

SELECT DISTINCT distinct_func(1) FROM tenk1;

RESET max_parallel_workers_per_gather;

RESET min_parallel_table_scan_size;

RESET parallel_setup_cost;

RESET parallel_tuple_cost;

SELECT DISTINCT four FROM tenk1 WHERE four = 0;

SELECT DISTINCT four FROM tenk1 WHERE four = 0;

SELECT DISTINCT four FROM tenk1 WHERE four = 0 AND two <> 0;

SELECT DISTINCT four FROM tenk1 WHERE four = 0 AND two <> 0;

SELECT DISTINCT four, 1, 2, 3 FROM tenk1 WHERE four = 0;

SELECT DISTINCT four, 1, 2, 3 FROM tenk1 WHERE four = 0;

SET parallel_setup_cost = 0;

SET min_parallel_table_scan_size = 0;

SET max_parallel_workers_per_gather = 2;

SELECT DISTINCT four FROM tenk1 WHERE four = 10;

RESET max_parallel_workers_per_gather;

RESET min_parallel_table_scan_size;

RESET parallel_setup_cost;

CREATE TEMPORARY TABLE disttable ( f1 INT );

INSERT INTO disttable VALUES (1);

INSERT INTO disttable VALUES (2);

INSERT INTO disttable VALUES (3);

INSERT INTO disttable VALUES (NULL);

SELECT f1, f1 IS DISTINCT FROM 2 AS "not 2" FROM disttable;

SELECT
  f1,
  f1 IS DISTINCT FROM NULL AS "not null"
FROM
  disttable;

SELECT f1, f1 IS DISTINCT FROM f1 AS "false" FROM disttable;

SELECT
  f1,
  f1 IS DISTINCT FROM f1 + 1 AS "not null"
FROM
  disttable;

SELECT 1 IS DISTINCT FROM 2 AS yes;

SELECT 2 IS DISTINCT FROM 2 AS no;

SELECT 2 IS DISTINCT FROM NULL AS yes;

SELECT NULL IS DISTINCT FROM NULL AS no;

SELECT 1 IS NOT DISTINCT FROM 2 AS no;

SELECT 2 IS NOT DISTINCT FROM 2 AS yes;

SELECT 2 IS NOT DISTINCT FROM NULL AS no;

SELECT NULL IS NOT DISTINCT FROM NULL AS yes;

CREATE TABLE distinct_tbl ( x INT, y INT );

INSERT INTO distinct_tbl
SELECT
  i % 10,
  i % 10
FROM
  generate_series(1,
  1000) AS i;

CREATE INDEX "distinct_tbl_x_y_idx" ON distinct_tbl USING btree
(
  x,
  y
);

ANALYZE distinct_tbl;

SET enable_hashagg = off;

SELECT DISTINCT y, x FROM distinct_tbl;

SELECT DISTINCT y, x FROM distinct_tbl;

SELECT DISTINCT
  y,
  x
FROM
  (SELECT
    *
  FROM
    distinct_tbl
  ORDER BY x) AS s;

SELECT DISTINCT
  y,
  x
FROM
  (SELECT
    *
  FROM
    distinct_tbl
  ORDER BY x) AS s;

SET parallel_tuple_cost = 0;

SET parallel_setup_cost = 0;

SET min_parallel_table_scan_size = 0;

SET min_parallel_index_scan_size = 0;

SET max_parallel_workers_per_gather = 2;

SELECT DISTINCT y, x FROM distinct_tbl LIMIT 10;

SELECT DISTINCT y, x FROM distinct_tbl LIMIT 10;

RESET max_parallel_workers_per_gather;

RESET min_parallel_index_scan_size;

RESET min_parallel_table_scan_size;

RESET parallel_setup_cost;

RESET parallel_tuple_cost;

SELECT DISTINCT y, x FROM distinct_tbl ORDER BY y;

SELECT DISTINCT y, x FROM distinct_tbl ORDER BY y;

RESET enable_hashagg;

DROP TABLE "distinct_tbl";
